xpl/xpl/xpl_parser.output
   0  $accept : file $end

   1  file : decls
   2       |

   3  decl : variable ';'
   4       | function

   5  decls : decl
   6        | decls decl

   7  declvar : variable ';'

   8  declsvar : declvar
   9           | declsvar declvar

  10  variable : tPUBLIC type tIDENTIFIER '=' expr
  11           | type tIDENTIFIER '=' expr
  12           | tPUBLIC type tIDENTIFIER
  13           | tUSE type tIDENTIFIER
  14           | type tIDENTIFIER

  15  functionvars : fvars
  16               |

  17  fvars : fvar
  18        | fvars ',' fvar

  19  fvar : type tIDENTIFIER

  20  function : tPUBLIC type tIDENTIFIER '(' functionvars ')' '=' literal body
  21           | type tIDENTIFIER '(' functionvars ')' '=' literal body
  22           | tPUBLIC type tIDENTIFIER '(' functionvars ')' body
  23           | type tIDENTIFIER '(' functionvars ')' body
  24           | tPUBLIC tPROCEDURE tIDENTIFIER '(' functionvars ')' body
  25           | tPROCEDURE tIDENTIFIER '(' functionvars ')' body
  26           | tPUBLIC type tIDENTIFIER '(' functionvars ')'
  27           | tPUBLIC tPROCEDURE tIDENTIFIER '(' functionvars ')'
  28           | tUSE type tIDENTIFIER '(' functionvars ')'
  29           | type tIDENTIFIER '(' functionvars ')'
  30           | tUSE tPROCEDURE tIDENTIFIER '(' functionvars ')'
  31           | tPROCEDURE tIDENTIFIER '(' functionvars ')'

  32  type : tTYPEINT
  33       | tTYPEREAL
  34       | tTYPESTRING
  35       | '[' type ']'

  36  body : block

  37  block : '{' declsvar instrs '}'
  38        | '{' declsvar '}'
  39        | '{' instrs '}'
  40        | '{' '}'

  41  instr : expr ';'
  42        | expr '!'
  43        | expr tPRINTLINE
  44        | tNEXT
  45        | tSTOP
  46        | tRETURN
  47        | condinstr
  48        | loopinstr
  49        | block
  50        | tFROM expr tTO expr tAPPLY tIDENTIFIER tTO tIDENTIFIER

  51  instrs : instr
  52         | instrs instr

  53  condinstr : tIF condinstrelseif

  54  condinstrelseif : '(' expr ')' instr
  55                  | '(' expr ')' instr tELSE instr
  56                  | '(' expr ')' instr tELSIF condinstrelseif

  57  loopinstr : tWHILE '(' expr ')' instr
  58            | tSWEEP '+' '(' lval ':' expr ':' expr ':' expr ')' instr
  59            | tSWEEP '+' '(' lval ':' expr ':' expr ')' instr
  60            | tSWEEP '-' '(' lval ':' expr ':' expr ':' expr ')' instr
  61            | tSWEEP '-' '(' lval ':' expr ':' expr ')' instr

  62  expr : literal
  63       | '@'
  64       | '-' expr
  65       | '+' expr
  66       | lval '?'
  67       | expr '+' expr
  68       | expr '-' expr
  69       | expr '*' expr
  70       | expr '/' expr
  71       | expr '%' expr
  72       | expr '<' expr
  73       | expr '>' expr
  74       | expr tGE expr
  75       | expr tLE expr
  76       | expr tNE expr
  77       | expr tEQ expr
  78       | '~' expr
  79       | expr '&' expr
  80       | expr '|' expr
  81       | '(' expr ')'
  82       | '[' expr ']'
  83       | lval
  84       | lval '=' expr
  85       | tIDENTIFIER '(' functionargs ')'

  86  exprs : expr
  87        | exprs ',' expr

  88  functionargs : exprs
  89               |

  90  literal : tINTEGER
  91          | tREAL
  92          | strings
  93          | tNULL

  94  strings : tSTRING
  95          | strings tSTRING

  96  lval : tIDENTIFIER
  97       | expr '[' expr ']'

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tPROCEDURE  shift 1
	tPUBLIC  shift 2
	tUSE  shift 3
	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	$end  reduce 2

	file  goto 8
	decl  goto 9
	variable  goto 10
	function  goto 11
	decls  goto 12
	type  goto 13


state 1
	function : tPROCEDURE . tIDENTIFIER '(' functionvars ')' body  (25)
	function : tPROCEDURE . tIDENTIFIER '(' functionvars ')'  (31)

	tIDENTIFIER  shift 14
	.  error


state 2
	variable : tPUBLIC . type tIDENTIFIER '=' expr  (10)
	variable : tPUBLIC . type tIDENTIFIER  (12)
	function : tPUBLIC . type tIDENTIFIER '(' functionvars ')' '=' literal body  (20)
	function : tPUBLIC . type tIDENTIFIER '(' functionvars ')' body  (22)
	function : tPUBLIC . tPROCEDURE tIDENTIFIER '(' functionvars ')' body  (24)
	function : tPUBLIC . type tIDENTIFIER '(' functionvars ')'  (26)
	function : tPUBLIC . tPROCEDURE tIDENTIFIER '(' functionvars ')'  (27)

	tPROCEDURE  shift 15
	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	.  error

	type  goto 16


state 3
	variable : tUSE . type tIDENTIFIER  (13)
	function : tUSE . type tIDENTIFIER '(' functionvars ')'  (28)
	function : tUSE . tPROCEDURE tIDENTIFIER '(' functionvars ')'  (30)

	tPROCEDURE  shift 17
	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	.  error

	type  goto 18


state 4
	type : tTYPEINT .  (32)

	.  reduce 32


state 5
	type : tTYPEREAL .  (33)

	.  reduce 33


state 6
	type : tTYPESTRING .  (34)

	.  reduce 34


state 7
	type : '[' . type ']'  (35)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	.  error

	type  goto 19


state 8
	$accept : file . $end  (0)

	$end  accept


state 9
	decls : decl .  (5)

	.  reduce 5


state 10
	decl : variable . ';'  (3)

	';'  shift 20
	.  error


state 11
	decl : function .  (4)

	.  reduce 4


state 12
	file : decls .  (1)
	decls : decls . decl  (6)

	tPROCEDURE  shift 1
	tPUBLIC  shift 2
	tUSE  shift 3
	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	$end  reduce 1

	decl  goto 21
	variable  goto 10
	function  goto 11
	type  goto 13


state 13
	variable : type . tIDENTIFIER '=' expr  (11)
	variable : type . tIDENTIFIER  (14)
	function : type . tIDENTIFIER '(' functionvars ')' '=' literal body  (21)
	function : type . tIDENTIFIER '(' functionvars ')' body  (23)
	function : type . tIDENTIFIER '(' functionvars ')'  (29)

	tIDENTIFIER  shift 22
	.  error


state 14
	function : tPROCEDURE tIDENTIFIER . '(' functionvars ')' body  (25)
	function : tPROCEDURE tIDENTIFIER . '(' functionvars ')'  (31)

	'('  shift 23
	.  error


state 15
	function : tPUBLIC tPROCEDURE . tIDENTIFIER '(' functionvars ')' body  (24)
	function : tPUBLIC tPROCEDURE . tIDENTIFIER '(' functionvars ')'  (27)

	tIDENTIFIER  shift 24
	.  error


state 16
	variable : tPUBLIC type . tIDENTIFIER '=' expr  (10)
	variable : tPUBLIC type . tIDENTIFIER  (12)
	function : tPUBLIC type . tIDENTIFIER '(' functionvars ')' '=' literal body  (20)
	function : tPUBLIC type . tIDENTIFIER '(' functionvars ')' body  (22)
	function : tPUBLIC type . tIDENTIFIER '(' functionvars ')'  (26)

	tIDENTIFIER  shift 25
	.  error


state 17
	function : tUSE tPROCEDURE . tIDENTIFIER '(' functionvars ')'  (30)

	tIDENTIFIER  shift 26
	.  error


state 18
	variable : tUSE type . tIDENTIFIER  (13)
	function : tUSE type . tIDENTIFIER '(' functionvars ')'  (28)

	tIDENTIFIER  shift 27
	.  error


state 19
	type : '[' type . ']'  (35)

	']'  shift 28
	.  error


state 20
	decl : variable ';' .  (3)

	.  reduce 3


state 21
	decls : decls decl .  (6)

	.  reduce 6


state 22
	variable : type tIDENTIFIER . '=' expr  (11)
	variable : type tIDENTIFIER .  (14)
	function : type tIDENTIFIER . '(' functionvars ')' '=' literal body  (21)
	function : type tIDENTIFIER . '(' functionvars ')' body  (23)
	function : type tIDENTIFIER . '(' functionvars ')'  (29)

	'='  shift 29
	'('  shift 30
	';'  reduce 14


state 23
	function : tPROCEDURE tIDENTIFIER '(' . functionvars ')' body  (25)
	function : tPROCEDURE tIDENTIFIER '(' . functionvars ')'  (31)
	functionvars : .  (16)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	')'  reduce 16

	fvar  goto 31
	fvars  goto 32
	functionvars  goto 33
	type  goto 34


state 24
	function : tPUBLIC tPROCEDURE tIDENTIFIER . '(' functionvars ')' body  (24)
	function : tPUBLIC tPROCEDURE tIDENTIFIER . '(' functionvars ')'  (27)

	'('  shift 35
	.  error


state 25
	variable : tPUBLIC type tIDENTIFIER . '=' expr  (10)
	variable : tPUBLIC type tIDENTIFIER .  (12)
	function : tPUBLIC type tIDENTIFIER . '(' functionvars ')' '=' literal body  (20)
	function : tPUBLIC type tIDENTIFIER . '(' functionvars ')' body  (22)
	function : tPUBLIC type tIDENTIFIER . '(' functionvars ')'  (26)

	'='  shift 36
	'('  shift 37
	';'  reduce 12


state 26
	function : tUSE tPROCEDURE tIDENTIFIER . '(' functionvars ')'  (30)

	'('  shift 38
	.  error


state 27
	variable : tUSE type tIDENTIFIER .  (13)
	function : tUSE type tIDENTIFIER . '(' functionvars ')'  (28)

	'('  shift 39
	';'  reduce 13


state 28
	type : '[' type ']' .  (35)

	.  reduce 35


state 29
	variable : type tIDENTIFIER '=' . expr  (11)

	tINTEGER  shift 40
	tREAL  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tNULL  shift 44
	'~'  shift 45
	'+'  shift 46
	'-'  shift 47
	'['  shift 48
	'('  shift 49
	'@'  shift 50
	.  error

	expr  goto 51
	literal  goto 52
	lval  goto 53
	strings  goto 54


state 30
	function : type tIDENTIFIER '(' . functionvars ')' '=' literal body  (21)
	function : type tIDENTIFIER '(' . functionvars ')' body  (23)
	function : type tIDENTIFIER '(' . functionvars ')'  (29)
	functionvars : .  (16)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	')'  reduce 16

	fvar  goto 31
	fvars  goto 32
	functionvars  goto 55
	type  goto 34


state 31
	fvars : fvar .  (17)

	.  reduce 17


state 32
	functionvars : fvars .  (15)
	fvars : fvars . ',' fvar  (18)

	','  shift 56
	')'  reduce 15


state 33
	function : tPROCEDURE tIDENTIFIER '(' functionvars . ')' body  (25)
	function : tPROCEDURE tIDENTIFIER '(' functionvars . ')'  (31)

	')'  shift 57
	.  error


state 34
	fvar : type . tIDENTIFIER  (19)

	tIDENTIFIER  shift 58
	.  error


state 35
	function : tPUBLIC tPROCEDURE tIDENTIFIER '(' . functionvars ')' body  (24)
	function : tPUBLIC tPROCEDURE tIDENTIFIER '(' . functionvars ')'  (27)
	functionvars : .  (16)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	')'  reduce 16

	fvar  goto 31
	fvars  goto 32
	functionvars  goto 59
	type  goto 34


state 36
	variable : tPUBLIC type tIDENTIFIER '=' . expr  (10)

	tINTEGER  shift 40
	tREAL  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tNULL  shift 44
	'~'  shift 45
	'+'  shift 46
	'-'  shift 47
	'['  shift 48
	'('  shift 49
	'@'  shift 50
	.  error

	expr  goto 60
	literal  goto 52
	lval  goto 53
	strings  goto 54


state 37
	function : tPUBLIC type tIDENTIFIER '(' . functionvars ')' '=' literal body  (20)
	function : tPUBLIC type tIDENTIFIER '(' . functionvars ')' body  (22)
	function : tPUBLIC type tIDENTIFIER '(' . functionvars ')'  (26)
	functionvars : .  (16)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	')'  reduce 16

	fvar  goto 31
	fvars  goto 32
	functionvars  goto 61
	type  goto 34


state 38
	function : tUSE tPROCEDURE tIDENTIFIER '(' . functionvars ')'  (30)
	functionvars : .  (16)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	')'  reduce 16

	fvar  goto 31
	fvars  goto 32
	functionvars  goto 62
	type  goto 34


state 39
	function : tUSE type tIDENTIFIER '(' . functionvars ')'  (28)
	functionvars : .  (16)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	')'  reduce 16

	fvar  goto 31
	fvars  goto 32
	functionvars  goto 63
	type  goto 34


state 40
	literal : tINTEGER .  (90)

	.  reduce 90


state 41
	literal : tREAL .  (91)

	.  reduce 91


state 42
	expr : tIDENTIFIER . '(' functionargs ')'  (85)
	lval : tIDENTIFIER .  (96)

	'('  shift 64
	tPRINTLINE  reduce 96
	tTO  reduce 96
	tAPPLY  reduce 96
	'='  reduce 96
	'|'  reduce 96
	'&'  reduce 96
	tEQ  reduce 96
	tNE  reduce 96
	tGE  reduce 96
	tLE  reduce 96
	'>'  reduce 96
	'<'  reduce 96
	'+'  reduce 96
	'-'  reduce 96
	'*'  reduce 96
	'/'  reduce 96
	'%'  reduce 96
	'?'  reduce 96
	'['  reduce 96
	';'  reduce 96
	','  reduce 96
	')'  reduce 96
	']'  reduce 96
	'!'  reduce 96
	':'  reduce 96


state 43
	strings : tSTRING .  (94)

	.  reduce 94


state 44
	literal : tNULL .  (93)

	.  reduce 93


state 45
	expr : '~' . expr  (78)

	tINTEGER  shift 40
	tREAL  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tNULL  shift 44
	'~'  shift 45
	'+'  shift 46
	'-'  shift 47
	'['  shift 48
	'('  shift 49
	'@'  shift 50
	.  error

	expr  goto 65
	literal  goto 52
	lval  goto 53
	strings  goto 54


state 46
	expr : '+' . expr  (65)

	tINTEGER  shift 40
	tREAL  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tNULL  shift 44
	'~'  shift 45
	'+'  shift 46
	'-'  shift 47
	'['  shift 48
	'('  shift 49
	'@'  shift 50
	.  error

	expr  goto 66
	literal  goto 52
	lval  goto 53
	strings  goto 54


state 47
	expr : '-' . expr  (64)

	tINTEGER  shift 40
	tREAL  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tNULL  shift 44
	'~'  shift 45
	'+'  shift 46
	'-'  shift 47
	'['  shift 48
	'('  shift 49
	'@'  shift 50
	.  error

	expr  goto 67
	literal  goto 52
	lval  goto 53
	strings  goto 54


state 48
	expr : '[' . expr ']'  (82)

	tINTEGER  shift 40
	tREAL  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tNULL  shift 44
	'~'  shift 45
	'+'  shift 46
	'-'  shift 47
	'['  shift 48
	'('  shift 49
	'@'  shift 50
	.  error

	expr  goto 68
	literal  goto 52
	lval  goto 53
	strings  goto 54


state 49
	expr : '(' . expr ')'  (81)

	tINTEGER  shift 40
	tREAL  shift 41
	tIDENTIFIER  shift 42
	tSTRING  shift 43
	tNULL  shift 44
	'~'  shift 45
	'+'  shift 46
	'-'  shift 47
	'['  shift 48
	'('  shift 49
	'@'  shift 50
	.  error

	expr  goto 69
	literal  goto 52
	lval  goto 53
	strings  goto 54


state 50
	expr : '@' .  (63)

	.  reduce 63


state 51
	variable : type tIDENTIFIER '=' expr .  (11)
	expr : expr . '+' expr  (67)
	expr : expr . '-' expr  (68)
	expr : expr . '*' expr  (69)
	expr : expr . '/' expr  (70)
	expr : expr . '%' expr  (71)
	expr : expr . '<' expr  (72)
	expr : expr . '>' expr  (73)
	expr : expr . tGE expr  (74)
	expr : expr . tLE expr  (75)
	expr : expr . tNE expr  (76)
	expr : expr . tEQ expr  (77)
	expr : expr . '&' expr  (79)
	expr : expr . '|' expr  (80)
	lval : expr . '[' expr ']'  (97)

	'|'  shift 70
	'&'  shift 71
	tEQ  shift 72
	tNE  shift 73
	tGE  shift 74
	tLE  shift 75
	'>'  shift 76
	'<'  shift 77
	'+'  shift 78
	'-'  shift 79
	'*'  shift 80
	'/'  shift 81
	'%'  shift 82
	'['  shift 83
	';'  reduce 11


state 52
	expr : literal .  (62)

	.  reduce 62


state 53
	expr : lval . '?'  (66)
	expr : lval .  (83)
	expr : lval . '=' expr  (84)

	'='  shift 84
	'?'  shift 85
	tPRINTLINE  reduce 83
	tTO  reduce 83
	tAPPLY  reduce 83
	'|'  reduce 83
	'&'  reduce 83
	tEQ  reduce 83
	tNE  reduce 83
	tGE  reduce 83
	tLE  reduce 83
	'>'  reduce 83
	'<'  reduce 83
	'+'  reduce 83
	'-'  reduce 83
	'*'  reduce 83
	'/'  reduce 83
	'%'  reduce 83
	'['  reduce 83
	';'  reduce 83
	','  reduce 83
	')'  reduce 83
	']'  reduce 83
	'!'  reduce 83
	':'  reduce 83


state 54
	literal : strings .  (92)
	strings : strings . tSTRING  (95)

	tSTRING  shift 86
	tPRINTLINE  reduce 92
	tTO  reduce 92
	tAPPLY  reduce 92
	'|'  reduce 92
	'&'  reduce 92
	tEQ  reduce 92
	tNE  reduce 92
	tGE  reduce 92
	tLE  reduce 92
	'>'  reduce 92
	'<'  reduce 92
	'+'  reduce 92
	'-'  reduce 92
	'*'  reduce 92
	'/'  reduce 92
	'%'  reduce 92
	'['  reduce 92
	';'  reduce 92
	','  reduce 92
	')'  reduce 92
	']'  reduce 92
	'{'  reduce 92
	'!'  reduce 92
	':'  reduce 92


state 55
	function : type tIDENTIFIER '(' functionvars . ')' '=' literal body  (21)
	function : type tIDENTIFIER '(' functionvars . ')' body  (23)
	function : type tIDENTIFIER '(' functionvars . ')'  (29)

	')'  shift 87
	.  error


state 56
	fvars : fvars ',' . fvar  (18)

	tTYPEINT  shift 4
	tTYPEREAL  shift 5
	tTYPESTRING  shift 6
	'['  shift 7
	.  error

	fvar  goto 88
	type  goto 34


state 57
	function : tPROCEDURE tIDENTIFIER '(' functionvars ')' . body  (25)
	function : tPROCEDURE tIDENTIFIER '(' functionvars ')' .  (31)

	'{'  shift 89
	$end  reduce 31
	tPROCEDURE  reduce 31
	tPUBLIC  reduce 31
	tUSE  reduce 31
	tTYPEINT  reduce 31
	tTYPEREAL  reduce 31
	tTYPESTRING  reduce 31
	'['  reduce 31

	body  goto 90
	block  goto 91


state 58
	fvar : type tIDENTIFIER .  (19)

	.  reduce 19


state 59
	function : tPUBLIC tPROCEDURE tIDENTIFIER '(' functionvars . ')' body  (24)
	function : tPUBLIC tPROCEDURE tIDENTIFIER '(' functionvars . ')'  (27)

	')'  shift 92
	.  error

